force-app/main/default/objects/NotificationCreatedEvent__e/NotificationCreatedEvent__e.object-meta.xml
<CustomObject>
    <label>Notification Created Event</label>
    <pluralLabel>Notification Created Events</pluralLabel>
</CustomObject>