force-app/main/default/objects/NotificationCreatedEvent__e/fields/CausationId__c.field-meta.xml
<CustomField><fullName
  >CausationId__c</fullName><label>Causation Id</label><length>100</length><type
  >Text</type></CustomField>