force-app/main/default/objects/NotificationCreatedEvent__e/fields/CorrelationId__c.field-meta.xml
<CustomField><fullName
  >CorrelationId__c</fullName><label>Correlation Id</label><length
  >100</length><type>Text</type></CustomField>