force-app/main/default/objects/NotificationCreatedEvent__e/fields/EventId__c.field-meta.xml
<CustomField><fullName
  >EventId__c</fullName><label>Event Id</label><length>64</length><type
  >Text</type></CustomField>