force-app/main/default/objects/NotificationCreatedEvent__e/fields/EventVersion__c.field-meta.xml
<CustomField>
    <fullName>EventVersion__c</fullName>
    <description>Schema version of this event payload.</description>
    <label>Event Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>