force-app/main/default/objects/NotificationCreatedEvent__e/fields/IdempotencyKey__c.field-meta.xml
<CustomField><fullName
  >IdempotencyKey__c</fullName><label>Idempotency Key</label><length
  >255</length><type>Text</type></CustomField>