force-app/main/default/objects/NotificationCreatedEvent__e/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Notification message body.</description>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>