force-app/main/default/objects/NotificationCreatedEvent__e/fields/NavigationUrl__c.field-meta.xml
<CustomField>
    <fullName>NavigationUrl__c</fullName>
    <description
  >Relative URL the client should navigate to when the notification is actioned.</description>
    <label>Navigation Url</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>