force-app/main/default/objects/NotificationCreatedEvent__e/fields/NotificationId__c.field-meta.xml
<CustomField>
    <fullName>NotificationId__c</fullName>
    <description
  >Id of the Partner_Notification__c record that was created.</description>
    <label>Notification Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>