force-app/main/default/objects/NotificationCreatedEvent__e/fields/PartnerAccountId__c.field-meta.xml
<CustomField>
    <fullName>PartnerAccountId__c</fullName>
    <description
  >Id of the partner account associated with this notification.</description>
    <label>Partner Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>