force-app/main/default/objects/NotificationCreatedEvent__e/fields/RecipientUserId__c.field-meta.xml
<CustomField>
    <fullName>RecipientUserId__c</fullName>
    <description
  >Id of the User who should receive this notification. Lets subscribers filter to the current user.</description>
    <label>Recipient User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>