force-app/main/default/objects/NotificationCreatedEvent__e/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description
  >Notification type, mirrors Partner_Notification__c.Notification_Type__c.</description>
    <label>Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>